--- a/q/273875.html
+++ b/q/273875.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>054</td><td>C gcc</td><td>240703T211432Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273919#273919">corvus_1</a></td></tr>
-<tr d-ix="1"><td>016</td><td>J</td><td>240703T190336Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273918#273918">noodle p</a></td></tr>
+<tr d-ix="0"><td>012</td><td>J</td><td>240703T190336Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273918#273918">noodle p</a></td></tr>
+<tr d-ix="1"><td>054</td><td>C gcc</td><td>240703T211432Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273919#273919">corvus_1</a></td></tr>
 <tr d-ix="2"><td>3534</td><td>Excel</td><td>240703T040741Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273891#273891">z..</a></td></tr>
 <tr d-ix="3"><td>054</td><td>Julia 1.0</td><td>240703T150526Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273917#273917">Ashlin H</a></td></tr>
 <tr d-ix="4"><td>028</td><td>Perl 5 n</td><td>240703T140300Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273916#273916">Xcali</a></td></tr>
@@ -58,23 +58,24 @@
 <tr d-ix="29"><td>003</td><td>Vyxal</td><td>240702T224503Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273877#273877">lyxal</a></td></tr>
 <tr d-ix="30"><td>016</td><td>APL Dyalog Unicode</td><td>240702T224208Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273876#273876">Ad&#225;</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 54 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.jsoftware.com" rel="nofollow noreferrer">J</a>, <s>16</s> 12 bytes</h1>
+<pre><code>&lt;/.~2&lt;.@^.#\
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m70wa8FOJT31NAVbKwV1BR0FAwUrINbVU3AO8nFbWlqSpmuxxkZfr87IRs8hTk85BiJ0M1GTKzU5I18hTUE9MSlZHZmTkpqWjiGQkZmVnZObl49ToqCwqLiktKy8orLKwNDI2EQdYtGCBRAaAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>This is my first time trying to golf in J! I got a lot of help golfing the forks and whatnot. I tried a different method from Bubbler's way and it ended 4 bytes shorter :)</p>
+<p>Thanks to ovs for telling me about <code>#\</code> which is a much shorter way of getting the length-one-range.</p>
+<p>Explanation:</p>
+<pre><code>&lt;/.~2&lt;.@^.#\
+&lt;/.~          NB. Group the items of the input by
+    2&lt;.@^.    NB. floors of the base-2 logarithms of
+          #\  NB. the range of 1 to the input's length.
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 54 bytes</h1>
 
 <pre class="lang-c prettyprint-override"><code>i;f(s,l){for(i=1;i&lt;l;puts(strndup(s+i/2-1,i/2)))i*=2;}
 </code></pre>
 <p><a href="https://tio.run/##FY07DoMwEAV7TrGi8hJQgKRzOAwxv02MAa@dH@LsDjSvGI3mqaxXKgSSneBU49pNVlBVSLppOXvHgp01jZ8Fn@hcZkW6LyJSUpVyC2QcjDUZEAhrBKCG2kLCUEFc31XTdv1Aj6cezTQvlp1/vT/fX16Ul2ssd/343Pu6NYIRD2Jb562BXEZb@AM" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://www.jsoftware.com" rel="nofollow noreferrer">J</a>, 16 bytes</h1>
-<pre><code>&lt;/.~2&lt;.@^.1+i.@#
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m70wa8FOJT31NAVbKwV1BR0FAwUrINbVU3AO8nFbWlqSpmuxwUZfr87IRs8hTs9QO1PPQRkivEuTKzU5I18hTUE9MSk5JTUtPSMzKzsnNy9fHaJgwQIIDQA" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p>This is my first time trying to golf in J! I got a lot of help golfing the forks and whatnot. I tried a different method from Bubbler's way and it ended up the same length.</p>
-<p>Explanation:</p>
-<pre><code>&lt;/.~2&lt;.@^.1+i.@#
-&lt;/.~              NB. Group the items of the input by
-    2&lt;.@^.        NB. floors of the base-2 logarithms of
-          1+i.@#  NB. the range of 1 to the input's length.
-</code></pre>
 </div>
 <div id="pu2" class="pu"><h1>Excel, <del>35</del> 34 bytes</h1>
 <p><em><sup>-1 byte thanks to <a href="https://codegolf.stackexchange.com/users/119296/doubleunary">@doubleunary</a></sup></em></p>
@@ -272,11 +273,11 @@ chunk&amp;=&gt;[]   ; split input by...
 </code></pre>
 <p>Fill that reserved area using the original input string, thereby partitioning it as required.</p>
 </div>
-<div id="pu19" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 58</h1>
+<div id="pu19" class="pu"><h1><a href="https://gcc.gnu.org/" rel="noreferrer">C (gcc)</a>, 58</h1>
 
 <pre class="lang-c prettyprint-override"><code>f(s,i)char*s;{while(putchar(*s++))if(!(++i&amp;i-1))puts(&quot;&quot;);}
 </code></pre>
-<p><a href="https://tio.run/##FcrNEoIgFEDhfU9BNNNwRRutdjS9iyHILUXjJyvHZyfbnu/IopUy7dDKLjaKXHxocDiYa9LM5wjS1C7zYp4MdoqNMfwDyzznAKjZlnGOeywqgNU8oxTEktAG0tdoCQMybwjRjNY32SjdGrw/ut4O49P5EF/T@/Mtq@PpTPMKxHo6FaKzpBSbJf0A" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##FcrNEoIgFEDhfU9BNNNwRRutdjS9iyHILUXjJyvHZyfbnu/IopUy7dDKLjaKXHxocDiYa9LM5wjS1C7zYp4MdoqNMfwDyzznAKjZlnGOeywqgNU8oxTEktAG0tdoCQMybwjRjNY32SjdGrw/ut4O49P5EF/T@/Mtq@PpTPMKxHo6FaKzpBSbJf0A" rel="noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu20" class="pu"><h1>Uiua, 11 bytes</h1>
 <pre><code>⊕□⊚⍜ₙ⇡2+1⧻.
@@ -296,10 +297,10 @@ chunk&amp;=&gt;[]   ; split input by...
      # corresponding with indices   {&quot;a&quot; &quot;bc&quot; &quot;defg&quot; &quot;hijklmno&quot;}
 </code></pre>
 </div>
-<div id="pu21" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a>, 5 bytes</h1>
+<div id="pu21" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="noreferrer">Nekomata</a>, 5 bytes</h1>
 <pre><code>JxËᶻL
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m70iLzU7PzexJHFZtJJurlLsgqWlJWm6Fiu8Kg53P9y222dJcVJyMVRwwU1VpUQlLqXEpGQImZKalo5gZWRmZefk5uUrQVQDAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=m70iLzU7PzexJHFZtJJurlLsgqWlJWm6Fiu8Kg53P9y222dJcVJyMVRwwU1VpUQlLqXEpGQImZKalo5gZWRmZefk5uUrQVQDAA" rel="noreferrer">Attempt This Online!</a></p>
 <pre><code>JxËᶻL
 J       Split the input into a list of substrings
  x      Push [0, ..., length of the list - 1]
@@ -362,10 +363,10 @@ J       Split the input into a list of substrings
 </code></pre>
 <p><a href="https://tio.run/##K0otycxL/P9fMUHD3sZWQ09TS1MPyNI1tAMy//9PTEpOSU1Lz8jMys7JzcsHAA" rel="nofollow noreferrer" title="Retina 0.8.2 – Try It Online">Try it online!</a> Explanation: The last stage is by default a Match stage if there is no replacement pattern for it to be a Replace stage. The <code>!</code> changes the output from the number of matches (in decimal) to the matches themselves (on separate lines). The pattern then uses a .NET balancing group to count its match index (which will be one less than a power of <code>2</code>) and allow one character more than that to be matched.</p>
 </div>
-<div id="pu27" class="pu"><h1><a href="https://github.com/TryItOnline/brainfuck" rel="nofollow noreferrer">brainfuck</a>, 26 bytes</h1>
+<div id="pu27" class="pu"><h1><a href="https://github.com/TryItOnline/brainfuck" rel="noreferrer">brainfuck</a>, 26 bytes</h1>
 <pre><code>+[[&gt;&gt;++&lt;,.&lt;-]+++++++++.&gt;&gt;]
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m70yqSgxMy-tNDl7wYKlpSVpuha7tKOj7ey0tW109Gx0Y7VhQM_OLhaiAKpuwfrEpOSU1LT0jMys7JzcvHyIMAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=m70yqSgxMy-tNDl7wYKlpSVpuha7tKOj7ey0tW109Gx0Y7VhQM_OLhaiAKpuwfrEpOSU1LT0jMys7JzcvHyIMAA" rel="noreferrer">Attempt This Online!</a></p>
 <p>Output separated by tabs (ASCII 9) with some extra tabs at the end.</p>
 </div>
 <div id="pu28" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 5 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
