--- a/q/273875.html
+++ b/q/273875.html
@@ -26,10 +26,10 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>012</td><td>Brachylog</td><td>240704T093923Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273921#273921">Fatalize</a></td></tr>
-<tr d-ix="1"><td>036</td><td>Ruby</td><td>240703T091600Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273902#273902">int 21h </a></td></tr>
-<tr d-ix="2"><td>012</td><td>APL Dyalog Extended</td><td>240702T224208Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273876#273876">Ad&#225;</a></td></tr>
-<tr d-ix="3"><td>012</td><td>J</td><td>240703T190336Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273918#273918">noodle p</a></td></tr>
+<tr d-ix="0"><td>012</td><td>J</td><td>240703T190336Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273918#273918">noodle p</a></td></tr>
+<tr d-ix="1"><td>012</td><td>Brachylog</td><td>240704T093923Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273921#273921">Fatalize</a></td></tr>
+<tr d-ix="2"><td>036</td><td>Ruby</td><td>240703T091600Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273902#273902">int 21h </a></td></tr>
+<tr d-ix="3"><td>012</td><td>APL Dyalog Extended</td><td>240702T224208Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273876#273876">Ad&#225;</a></td></tr>
 <tr d-ix="4"><td>054</td><td>C gcc</td><td>240703T211432Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273919#273919">corvus_1</a></td></tr>
 <tr d-ix="5"><td>3534</td><td>Excel</td><td>240703T040741Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273891#273891">z..</a></td></tr>
 <tr d-ix="6"><td>054</td><td>Julia 1.0</td><td>240703T150526Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273917#273917">Ashlin H</a></td></tr>
@@ -59,7 +59,21 @@
 <tr d-ix="30"><td>005</td><td>Jelly</td><td>240702T230349Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273880#273880">Jonathan</a></td></tr>
 <tr d-ix="31"><td>003</td><td>Vyxal</td><td>240702T224503Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273877#273877">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/JCumin/Brachylog" rel="nofollow noreferrer">Brachylog</a>, 12 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.jsoftware.com" rel="nofollow noreferrer">J</a>, <s>16</s> 12 bytes</h1>
+<pre><code>&lt;/.~2&lt;.@^.#\
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m70wa8FOJT31NAVbKwV1BR0FAwUrINbVU3AO8nFbWlqSpmuxxkZfr87IRs8hTk85BiJ0M1GTKzU5I18hTUE9MSlZHZmTkpqWjiGQkZmVnZObl49ToqCwqLiktKy8orLKwNDI2EQdYtGCBRAaAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>This is my first time trying to golf in J! I got a lot of help golfing the forks and whatnot. I tried a different method from Bubbler's way and it ended 4 bytes shorter :)</p>
+<p>Thanks to ovs for telling me about <code>#\</code> which is a much shorter way of getting the length-one-range.</p>
+<p>Explanation:</p>
+<pre><code>&lt;/.~2&lt;.@^.#\
+&lt;/.~          NB. Group the items of the input by
+    2&lt;.@^.    NB. floors of the base-2 logarithms of
+          #\  NB. the range of 1 to the input's length.
+              NB.   (Literally: length of prefixes)
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/JCumin/Brachylog" rel="nofollow noreferrer">Brachylog</a>, 12 bytes</h1>
 <pre><code>{Ẹg|ḍgᵗ↰ʰc}b
 </code></pre>
 <p><a href="https://tio.run/##ATYAyf9icmFjaHlsb2cy//974bq4Z3zhuI1n4bWX4oawyrBjfWL//yJhYmNkZWZnaGlqa2xtbm8i/1o" rel="nofollow noreferrer" title="Brachylog – Try It Online">Try it online!</a></p>
@@ -71,13 +85,13 @@
    |              Else
     ḍ             Dichotomize the string [&lt;first half&gt;, &lt;second half&gt;]
      gᵗ           Wrap the second half in a list
-       ↰ʰ         Recursive call of the first half
+       ↰ʰ         Recursive call on the first half
          c        Concatenate to flatten the current level
 
            b    Remove the first element which is the empty string at the end
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>55</s> <s>53</s>  <s>47</s> <a href="https://ato.pxeger.com/run?1=m72kqDSpcsGCpaUlaboWN3XTbHXtinXKbKNjdRJtDauLFezTooujE_X0YnXKbGyKo_X09BKBUlpGsVZltRBNuwpKS4oV0qKVEpOSU1LT0jMys7JzcvPylWK5IApgpgMA" rel="nofollow noreferrer"><s>45</s></a> 36 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>55</s> <s>53</s>  <s>47</s> <a href="https://ato.pxeger.com/run?1=m72kqDSpcsGCpaUlaboWN3XTbHXtinXKbKNjdRJtDauLFezTooujE_X0YnXKbGyKo_X09BKBUlpGsVZltRBNuwpKS4oV0qKVEpOSU1LT0jMys7JzcvPylWK5IApgpgMA" rel="nofollow noreferrer"><s>45</s></a> 36 bytes</h1>
 <ul>
 <li>-2 bytes thanks to <a href="https://codegolf.stackexchange.com/users/92901/dingus">Dingus</a></li>
 <li>-9 bytes thanks to <a href="https://codegolf.stackexchange.com/users/18535/g-b">G B</a></li>
@@ -88,7 +102,7 @@
 <p>@OP just to let you know, the easy tasks are welcome! :)</p>
 <p>A recursive function with 2 variables: the original string and the counter. The function chops a string piece, adds it to the unnamed output vector and updates the counter until the string is empty.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/abrudz/dyalog-apl-extended" rel="nofollow noreferrer">APL (Dyalog Extended)</a>, <s>16</s> 12 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/abrudz/dyalog-apl-extended" rel="nofollow noreferrer">APL (Dyalog Extended)</a>, <s>16</s> 12 bytes</h1>
 
 <p>Anonymous tacit prefix function, port of <a href="https://codegolf.stackexchange.com/a/273885/43319">Bubbler's J</a>.</p>
 <pre class="lang-apl prettyprint-override"><code>⊢⊂⍨1=1⊥2⊤⍳∘≢
@@ -113,19 +127,6 @@
 <p><code>1↑¨⍨</code> prefixes of 1 (padding with trailing 0s) of lengths…</p>
 <p><code>2*</code> two to the power of…</p>
 <p><code>⍳∘≢</code> the indices (0…n−1) of the length of the argument</p>
-</div>
-<div id="pu3" class="pu"><h1><a href="https://www.jsoftware.com" rel="nofollow noreferrer">J</a>, <s>16</s> 12 bytes</h1>
-<pre><code>&lt;/.~2&lt;.@^.#\
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m70wa8FOJT31NAVbKwV1BR0FAwUrINbVU3AO8nFbWlqSpmuxxkZfr87IRs8hTk85BiJ0M1GTKzU5I18hTUE9MSlZHZmTkpqWjiGQkZmVnZObl49ToqCwqLiktKy8orLKwNDI2EQdYtGCBRAaAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p>This is my first time trying to golf in J! I got a lot of help golfing the forks and whatnot. I tried a different method from Bubbler's way and it ended 4 bytes shorter :)</p>
-<p>Thanks to ovs for telling me about <code>#\</code> which is a much shorter way of getting the length-one-range.</p>
-<p>Explanation:</p>
-<pre><code>&lt;/.~2&lt;.@^.#\
-&lt;/.~          NB. Group the items of the input by
-    2&lt;.@^.    NB. floors of the base-2 logarithms of
-          #\  NB. the range of 1 to the input's length.
-</code></pre>
 </div>
 <div id="pu4" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 54 bytes</h1>
 
